// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid-default-named-import.mjs [babel] format 1`] = `
"Only \`import module x from "./module"\` is valid. (1:15)
> 1 | import module foo, {bar} from "./module.wasm";
    |               ^
  2 |
Cause: Only \`import module x from "./module"\` is valid. (1:14)"
`;

exports[`invalid-export-from.mjs [babel] format 1`] = `
"Unexpected token, expected "{" (1:8)
> 1 | export module x from "./module.wasm";
    |        ^
  2 |
Cause: Unexpected token, expected "{" (1:7)"
`;

exports[`invalid-flow-type-import-1.mjs [babel] format 1`] = `
"Unexpected token, expected "from" (1:13)
> 1 | import type module foo from "./module.wasm";
    |             ^
  2 |
Cause: Unexpected token, expected "from" (1:12)"
`;

exports[`invalid-flow-type-import-2.mjs [babel] format 1`] = `
"Unexpected token, expected "from" (1:20)
> 1 | import module type foo from "./module.wasm";
    |                    ^
  2 |
Cause: Unexpected token, expected "from" (1:19)"
`;

exports[`invalid-flow-typeof-import-1.mjs [babel] format 1`] = `
"Unexpected token, expected "from" (1:15)
> 1 | import typeof module foo from "./module.wasm";
    |               ^
  2 |
Cause: Unexpected token, expected "from" (1:14)"
`;

exports[`invalid-flow-typeof-import-2.mjs [babel] format 1`] = `
"Unexpected token, expected "from" (1:22)
> 1 | import module typeof foo from "./module.wasm";
    |                      ^
  2 |
Cause: Unexpected token, expected "from" (1:21)"
`;

exports[`invalid-identifier-source.mjs [babel] format 1`] = `
"Unexpected token, expected "from" (1:20)
> 1 | import module from foo
    |                    ^
  2 |
Cause: Unexpected token, expected "from" (1:19)"
`;

exports[`invalid-module-escape.mjs [babel] format 1`] = `
"Unexpected token, expected "from" (1:20)
> 1 | import modul\\u0065 foo from "./module.wasm";
    |                    ^
  2 |
Cause: Unexpected token, expected "from" (1:19)"
`;

exports[`invalid-module-source.mjs [babel] format 1`] = `
"Unexpected token, expected "{" (1:15)
> 1 | import module "foo";
    |               ^
  2 |
Cause: Unexpected token, expected "{" (1:14)"
`;

exports[`invalid-named-import.mjs [babel] format 1`] = `
"Only \`import module x from "./module"\` is valid. (1:17)
> 1 | import module { foo } from "./module.wasm";
    |                 ^
  2 |
Cause: Only \`import module x from "./module"\` is valid. (1:16)"
`;

exports[`invalid-namespace-import.mjs [babel] format 1`] = `
"Only \`import module x from "./module"\` is valid. (1:15)
> 1 | import module * as foo from "./module.wasm";
    |               ^
  2 |
Cause: Only \`import module x from "./module"\` is valid. (1:14)"
`;

exports[`invalid-ts-type-import-1.mts [babel] format 1`] = `
"Unexpected token, expected "from" (1:13)
> 1 | import type module foo from "./module.wasm";
    |             ^
  2 |
Cause: Unexpected token, expected "from" (1:12)"
`;

exports[`invalid-ts-type-import-2.mts [babel] format 1`] = `
"Unexpected token, expected "from" (1:20)
> 1 | import module type foo from "./module.wasm";
    |                    ^
  2 |
Cause: Unexpected token, expected "from" (1:19)"
`;
